Finshed the project

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dice():\n",
-    "    return None"
+    "    return random.randint(1,6)"
    ]
   },
   {
@@ -67,12 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def attack(number_of_dice):\n",
-    "    return None"
+    "    if number_of_dice < 1 or number_of_dice > 3:\n",
+    "        raise ValueError(\"Number of dice must be 1, 2, or 3\")\n",
+    "    \n",
+    "    total = sum(dice() for _ in range(number_of_dice))  # Roll dice and sum results\n",
+    "    return total"
    ]
   },
   {
@@ -94,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def battle(number_of_dice,enemy_armour):\n",
-    "    '''Returns True if you beat the enemy, False otherwise'''\n",
-    "    return None"
+    "def battle(number_of_dice, enemy_armour):\n",
+    "    attack_total = attack(number_of_dice)  # Calculate the total of the attack dice roll\n",
+    "    return attack_total > enemy_armour  # Return True if attack_total > enemy_armour, otherwise False"
    ]
   },
   {
@@ -113,12 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def battle_1():\n",
-    "    return None"
+    "    return battle(2, 8)"
    ]
   },
   {
@@ -131,12 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def battle_2():\n",
-    "    return None"
+    "    return battle(3, 12)"
    ]
   },
   {
@@ -149,12 +153,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def empiric_prob(experiment, n=10000):\n",
-    "    return None"
+    "    count = 0\n",
+    "    for _ in range(n):\n",
+    "        if experiment():\n",
+    "            count += 1\n",
+    "    return count / n\n",
+    "\n",
+    "    # return sum([experiment() for _ in range(n)]) / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2823"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empiric_prob(battle_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2596"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "empiric_prob(battle_2)"
    ]
   },
   {
@@ -176,9 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 36\n"
+     ]
+    }
+   ],
    "source": [
     "amount = 0\n",
     "count=0\n",
@@ -193,9 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.002"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "round(abs(empiric_prob(battle_1)-amount/count),4)"
    ]
@@ -210,10 +279,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27907"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emp_prob = empiric_prob(battle_1, n=100000)\n",
+    "emp_prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0013"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(abs(emp_prob- amount/count),4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,13 +328,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Times</th>\n",
+       "      <th>Empirical Probability</th>\n",
+       "      <th>Difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>0.277400</td>\n",
+       "      <td>0.000378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100000</td>\n",
+       "      <td>0.274780</td>\n",
+       "      <td>0.002998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0.277945</td>\n",
+       "      <td>0.000167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000000</td>\n",
+       "      <td>0.277615</td>\n",
+       "      <td>0.000163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Times  Empirical Probability  Difference\n",
+       "0     10000               0.277400    0.000378\n",
+       "1    100000               0.274780    0.002998\n",
+       "2   1000000               0.277945    0.000167\n",
+       "3  10000000               0.277615    0.000163"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "times = [10000, 100000, 1000000, 10000000]\n",
     "experiments = []\n",
-    "\n"
+    "\n",
+    "for t in times:\n",
+    "    experiments.append(empiric_prob(battle_1,t))\n",
+    "dif = []    \n",
+    "for i in range(len(times)): \n",
+    "    dif.append(abs(experiments[i]-5/18))   \n",
+    "data = {'Times':['10000', '100000', '1000000', '10000000'], 'Empirical Probability': experiments,\n",
+    "        'Difference': dif}\n",
+    "df = pd.DataFrame(data)\n",
+    "df    "
    ]
   },
   {
@@ -243,10 +423,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Times</th>\n",
+       "      <th>Empirical Probability</th>\n",
+       "      <th>Difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>0.257400</td>\n",
+       "      <td>0.001859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100000</td>\n",
+       "      <td>0.258960</td>\n",
+       "      <td>0.000299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000</td>\n",
+       "      <td>0.259546</td>\n",
+       "      <td>0.000287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10000000</td>\n",
+       "      <td>0.259387</td>\n",
+       "      <td>0.000127</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Times  Empirical Probability  Difference\n",
+       "0     10000               0.257400    0.001859\n",
+       "1    100000               0.258960    0.000299\n",
+       "2   1000000               0.259546    0.000287\n",
+       "3  10000000               0.259387    0.000127"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amount = 0\n",
+    "for x in range(1,7,1):\n",
+    "    for y in range(1,7,1):\n",
+    "        for z in range(1,7,1):\n",
+    "            if x+y+z>12:\n",
+    "                amount=amount+1\n",
+    "times = [10000, 100000, 1000000, 10000000]\n",
+    "experiments = []\n",
+    "for t in times:\n",
+    "    experiments.append(empiric_prob(battle_2,t))\n",
+    "dif = []    \n",
+    "for i in range(len(times)): \n",
+    "    dif.append(abs(experiments[i]-amount/6**3))   \n",
+    "data = {'Times':['10000', '100000', '1000000', '10000000'], 'Empirical Probability': experiments,\n",
+    "        'Difference': dif}\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -272,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
